<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicapp.LibraryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/action_bar" />

    <LinearLayout
        android:id="@+id/menu_bar_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:src="@drawable/home"
            android:tint="@color/icon_color" />

        <ImageView
            android:id="@+id/library"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:src="@drawable/library"
            android:tint="@color/icon_color" />

        <ImageView
            android:id="@+id/radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:src="@drawable/radio"
            android:tint="@color/icon_color" />


        <ImageView
            android:id="@+id/store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:src="@drawable/store"
            android:tint="@color/icon_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_bar_descriptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_bar_icons"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">


        <TextView
            style="@style/menu_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_button" />

        <TextView
            style="@style/menu_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/library_button" />


        <TextView
            style="@style/menu_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button" />

        <TextView
            style="@style/menu_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/store_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/menu_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/menu_bar_descriptions"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menu_divider"
        android:orientation="vertical">

        <TextView
            style="@style/library_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/artists" />

        <TextView
            style="@style/library_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/albums" />

        <TextView
            style="@style/library_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/songs" />

        <TextView
            style="@style/library_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/playlists" />

        <TextView
            style="@style/library_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/genres" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2.5dp"
                android:src="@drawable/pokemon" />

            <TextView
                style="@style/library_page"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight=".5"
                android:text="@string/current_artist" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
